# irontide-tentative

./: AGENT.md  Cargo.toml  README.md
src/: lib.rs  main.rs  mod.rs  rss.rs
src/local/: mod.rs
src/local/cli/: args.rs
src/local/iced/: all.rs
tests/: cliargs.rs
