[package]
name = "irontide"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"] }
colored = "3.0.0"
dotenv = { version = "0.15.0", features = ["clap"] }
env_logger = "0.11.8"
ice-rs = "0.3.0"
lazy_static = "1.5.0"
log = "0.4.27"
rand = { version = "0.9.1", features = ["nightly", "log", "serde", "simd_support"] }
reqwest = "0.12.15"
rusqlite = "0.35.0"
