[package]
name = "irontide"
version = "0.1.0"
edition = "2024"

[dependencies]
cbox = "0.3.0"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"] }
colored = "3.0.0"
dotenv = { version = "0.15.0", features = ["clap"] }
env_logger = "0.11.8"
ice-rs = "0.3.0"
libc = { version = "0.2.172", features = ["const-extern-fn", "use_std"] }
log = "0.4.27"
rand = { version = "0.9.1", features = ["log", "serde"] }
reqwest = { version = "0.12.15", features = ["blocking", "rustls-tls"] }
feed-rs = "2.3.1"
rusqlite = "0.35.0"

[features]
gui = []
